[gd_scene load_steps=9 format=3 uid="uid://r8hnhjq1f0q0"]

[ext_resource type="Theme" uid="uid://de7fb8k462lxb" path="res://Theme/PopTheme.tres" id="1_netfp"]
[ext_resource type="Script" uid="uid://ba6i2l3wt1dop" path="res://Scripts/UI/ShipStatContainer.gd" id="2_hehea"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jvfpq"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6mq6a"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.162354, 0.162355, 0.162354, 1)
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
corner_detail = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ufp1a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5v3x0"]
bg_color = Color(1, 0.763983, 0.0812772, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.162354, 0.162355, 0.162354, 1)
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
corner_detail = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ueh8q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nasb0"]
bg_color = Color(0.860776, 0.171046, 0.212491, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.162354, 0.162355, 0.162354, 1)
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
corner_detail = 1

[node name="ShipStatContainer" type="VBoxContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_netfp")
theme_override_constants/separation = 0
script = ExtResource("2_hehea")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 14
text = "stat"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 3
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 20
text = "12 / 23"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxEmpty_jvfpq")
theme_override_styles/fill = SubResource("StyleBoxFlat_6mq6a")
value = 19.17
show_percentage = false

[node name="ItemBar" type="ProgressBar" parent="ProgressBar"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_ufp1a")
theme_override_styles/fill = SubResource("StyleBoxFlat_5v3x0")
value = 60.17
show_percentage = false

[node name="ItemNegBar" type="ProgressBar" parent="ProgressBar"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_ueh8q")
theme_override_styles/fill = SubResource("StyleBoxFlat_nasb0")
value = 10.0
show_percentage = false
